<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:gravity="left"
            android:text="@string/open" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/Ctrlo" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:gravity="left"
            android:text="@string/save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/ctrls" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:gravity="left"
            android:text="@string/saveas" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/ctrlshifts" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:gravity="left"
            android:text="@string/Import" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:gravity="left"
            android:text="@string/export" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/ctrle" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:gravity="left"
            android:text="@string/quit" />
    </TableRow>

</TableLayout>
